<resources>
    <string name="app_name">diary</string>
    <string name="enter_pin">Введите PIN-код</string>
    <string name="create_pin">Придумайте PIN-код</string>
    <string name="again_pin">Повторите PIN-код</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="diary">Дневник</string>
    <string name="filter">filter</string>
    <string name="editor">Редактор записей</string>
    <string name="ok">ok</string>
    <string name="back">back</string>
    <string name="record_name">Название записи</string>
    <string name="record_text">Текст записи</string>
    <string name="delete">delete</string>
    <string name="addrecord">addRecord</string>
    <string name="empty_diary">Записи в дневнике отсутствуют</string>
    <string name="create_record">Создать запись</string>
</resources>