<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/create_pin"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="77dp">

        <View
            android:id="@+id/circle1"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:background="@drawable/circle" />

        <View
            android:id="@+id/circle2"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:background="@drawable/circle"
            android:layout_marginStart="32dp" />

        <View
            android:id="@+id/circle3"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:background="@drawable/circle"
            android:layout_marginStart="32dp" />

        <View
            android:id="@+id/circle4"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:background="@drawable/circle"
            android:layout_marginStart="32dp" />
    </LinearLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="78dp"
        android:layout_gravity="center"
        android:rowCount="4"
        android:columnCount="3">

        <Button
            android:id="@+id/button1"
            style="@style/PinButtonStyle"
            android:fontFamily="@font/roboto"
            android:text="@string/one" />

        <Button
            android:id="@+id/button2"
            android:text="@string/two"
            style="@style/PinButtonStyle" />

        <Button
            android:id="@+id/button3"
            android:text="@string/three"
            style="@style/PinButtonStyle" />

        <Button
            android:id="@+id/button4"
            android:text="@string/four"
            style="@style/PinButtonStyle" />

        <Button
            android:id="@+id/button5"
            android:text="@string/five"
            style="@style/PinButtonStyle" />

        <Button
            android:id="@+id/button6"
            android:text="@string/six"
            style="@style/PinButtonStyle" />

        <Button
            android:id="@+id/button7"
            android:text="@string/seven"
            style="@style/PinButtonStyle" />

        <Button
            android:id="@+id/button8"
            android:text="@string/eight"
            style="@style/PinButtonStyle" />

        <Button
            android:id="@+id/button9"
            android:text="@string/nine"
            style="@style/PinButtonStyle" />

        <Button
            android:id="@+id/button0"
            android:text="@string/zero"
            style="@style/PinButtonStyle"
            android:layout_column="1" />

    </GridLayout>

</LinearLayout>