<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/top_panel"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:elevation="10dp">

        <LinearLayout
            android:id="@+id/top_panel_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="18dp">

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:contentDescription="@string/back"
                android:src="@drawable/back"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/editor"
                android:textSize="20sp"
                android:fontFamily="@font/roboto"
                android:layout_weight="1"
                android:textAlignment="center" />

            <ImageView
                android:id="@+id/ok"
                android:layout_width="wrap_content"
                android:contentDescription="@string/ok"
                android:src="@drawable/ok"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/record_name"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="32dp"
        android:inputType="text"
        android:fontFamily="@font/roboto_bold"
        android:background="@null"
        android:maxLines="1"
        android:minLines="1"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/record_text"
        android:fontFamily="@font/roboto"
        android:layout_marginHorizontal="16dp"
        android:inputType="textMultiLine"
        android:background="@null"
        android:minLines="1"
        tools:ignore="LabelFor" />

</LinearLayout>