<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/top_panel"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:elevation="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/top_panel_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="18dp"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/diary"
                android:textSize="20sp"
                android:fontFamily="@font/roboto"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_marginStart="24dp"/>

            <ImageView
                android:id="@+id/filter"
                android:layout_width="wrap_content"
                android:contentDescription="@string/filter"
                android:src="@drawable/filter"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:id="@+id/emptyDiary"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/top_panel"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="220dp"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/avatar"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:src="@drawable/circle" />

        <TextView
            android:layout_marginVertical="41dp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textSize="20sp"
            android:text="@string/empty_diary" />

        <Button
            android:id="@+id/create_button"
            android:paddingVertical="14sp"
            android:paddingHorizontal="12dp"
            android:backgroundTint="#FFD56B"
            android:text="@string/create_record"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_width="220dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/records_field"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_panel">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:itemCount="7"
            tools:listitem="@layout/record_item" />

        <ImageButton
            android:id="@+id/plus_button"
            android:layout_width="69dp"
            android:layout_height="69dp"
            android:layout_marginEnd="42dp"
            android:layout_marginBottom="42dp"
            android:background="@drawable/add_button"
            android:contentDescription="@string/addrecord"
            android:src="@drawable/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>